# mptt

./: README  db.sqlite3  manage.py  pyproject.toml
genre/: admin.py  forms.py  models.py  urls.py  views.py
genre/migrations/: 0001_initial.py
genre/templates/: add_file.html  homepage.html
hiermptt/: asgi.py  settings.py  urls.py  wsgi.py
